bk_ida/gccida/g3/emit_note_before
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_note_before/src/emit-rtl.c:4383:25: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( unsigned __int64)before[1]; 
                        ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_note_before/src/emit-rtl.c:4388:15: error: use of undeclared identifier 'rtx_def'
result[1] = ( rtx_def)_mm_unpacklo_epi64( ( __m128i)v7, ( __m128i)( unsigned __int64)before); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_note_before/src/emit-rtl.c:4438:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)before[2]; 
                ^~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_note_before/src/obj/emit-rtl.o] Error 1
